--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Compiler files
+lib/
 cache/
 out/
+artifacts/
 
 # Ignores development broadcast logs
 !/broadcast
@@ -12,3 +14,7 @@ docs/
 
 # Dotenv file
 .env
+
+# Node modules
+node_modules/
+package-lock.json
