--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@ out = "out"
 libs = ["node_modules", "lib"]
 test = "test/foundry"
 scripts = "script/foundry"
-solc_version = "0.8.20"
+auto_detect_solc = true
 optimizer = true
 optimizer_runs = 200
 
