--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "chai": "^4.3.7",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2"
+    "ethers": "^6.13.2",
+    "viem": "^2.20.0"
   }
 }
