--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chai": "^4.3.7",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
+    "hardhat-verify": "^1.0.0",
     "viem": "^2.20.0"
   }
 }
