--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 TEST_PRIVATE_KEY = 
 DEPLOYER_PRIVATE_KEY = 
 
-ARBISCAN_API_KEY = 
+BASE_RPC_URL = 
+BASESCAN_API_KEY = 
 
-ARBITRUM_RPC_URL = 
+SEPOLIA_RPC_URL = 
+ETHERSCAN_API_KEY = 
